--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-Hello
-<a href="/hello">hello</a>
+<div style="height: 50px;"></div>
+<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
+    <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
+    <button type="submit" style="width:20%; height: 80%">Go</button>
+</form>
 </body>
 </html>
